...
  @override
  Widget build(BuildContext context) {
    return Column(
      crossAxisAlignment: CrossAxisAlignment.stretch,
      children: <Widget>[
        TextFormField(
          key: const Key('source-editor-name'),
          controller: nameController,
          decoration: const InputDecoration(labelText: '书源名称'),
          validator: (value) {
            if (value == null || value.trim().isEmpty) {
              return '书源名称不能为空';
            }
...
